# onescript-deegen-vm

./: .gitignore  README.md
benchmarks/: RESULTS.md  fib30.os  mandel.os  nbody.os  run_bench.sh
docs/: bytecode-format.md  deegen-integration-plan.md  osbin-format.md
scripts/: gen_opcode_headers.sh  gen_opcodes.sh
tests/e2e/: fib.os  run_e2e.sh
tests/fixtures/: fib.osbin
tools/: opcodes.csv
tools/osbc-export/: Compilation.cs  OpCodes.g.cs  OsbcExport.csproj  OsbinWriter.cs  Program.cs  README.md  SilentHost.cs
vm/: CMakeLists.txt  Makefile
vm/annotated/: README.md  onescript_bytecodes.cpp
vm/include/: onescript_opcodes.h
vm/include/onescript/: interp.h  loader.h  module.h  value.h
vm/src/: disasm.cpp  interp.cpp  loader.cpp  main.cpp  value.cpp
vm/tests/: CMakeLists.txt  test_fib.cpp  test_interp.cpp  test_loader.cpp
